infra/k8s/posts-without-deployment.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: posts
spec: 
  containers:
    - name: posts
      image: docker1is/posts:0.0.1
      imagePullPolicy: Never
