infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: posts-depl
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: posts
  template: 
    metadata: 
      labels:
        app: posts
    spec: 
      containers:
        - name: posts
          image: docker1is/posts

# adding the cluster ip service config 
---
apiVersion: v1
kind: Service 
metadata: 
  name: posts-cluster-ip-serv
spec: 
  selector: 
    app: posts
  ports: 
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
