infra/k8s/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-serv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  # annotations: 
  #   kubernetes.io.ingress.class: nginx
spec: 
  ingressClassName: nginx
  rules: 
    - host: posts.com
      http:
        paths: 
          - path: /posts/create
            pathType: ImplementationSpecific
            backend: 
              service: 
                name: posts-cluster-ip-serv
                port: 
                  number: 4000
          - path: /posts
            pathType: ImplementationSpecific
            backend: 
              service: 
                name: query-cluster-ip-serv
                port: 
                  number: 4002
          - path: /posts/?(.*)/comments
            pathType: ImplementationSpecific
            backend: 
              service: 
                name: comments-cluster-ip-serv
                port: 
                  number: 4001
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend: 
              service: 
                name: client-cluster-ip-serv
                port: 
                  number: 3000
